--- a/doc/dftb+/manual/manual.bib
+++ b/doc/dftb+/manual/manual.bib
@@ -436,3 +436,15 @@ Density Functional Theory},
   volume =       {11},
   pages =        {3357-3363},
 }
+
+@article {petraglia15,
+author = {Petraglia, Riccardo and Steinmann, Stephan N. and
+                  Corminboeuf, Clemence},
+title = {A fast charge-Dependent atom-pairwise dispersion correction
+                  for DFTB3},
+journal = ijqc,
+volume = 115,
+doi = {10.1002/qua.24887},
+pages = {1265--1272},
+year = 2015
+}
